refactor(UserServiceTest): change names and add verify to tests